[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sports_signal_bot"
version = "0.1.0"
dependencies = [
    "pyyaml",
    "pydantic",
    "typer",
    "rich (>=15.0.0,<16.0.0)"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.0"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]
